feat: Implement migration from sgBackupConfig to Object Storage
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>